--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "Set NODE_ENV=Development&& nodemon server.js",
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
